#16672: reporting line numbers in <checklinks>.